app/styles/components/post/post.banner.css
.post__banner {
  margin-block-end: var(--spacing-lg);
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-template-rows: repeat(2, 1fr);
  aspect-ratio: 3/1;
  isolation: isolate;
    z-index: 0;
}

.post__banner__image {
  grid-column: 1 / -1;
  grid-row: 1 / -1;
  z-index: 1;
  border-radius: var(--radius-lg);
  border: 8px solid rgba(0, 0, 0, 0.642);
  opacity: 0.5;
}

.post__banner__text {
  /* --heading-color: var(--post__banner_text-color); */

  background-color: var(--color-neutral-a4-light);
  grid-column: 1 / -1;
  grid-row: 1 / -1;
  z-index: 2;

  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-template-rows: auto auto;
  row-gap: var(--spacing-sm);

  align-items: center;
  justify-items: center;
}

.post__banner__text-heading {
  grid-column: 1 / -1;
  grid-row: 1;
  text-align: center;
}

.post__banner__text-subtitle {
  grid-column: 1 / -1;
  grid-row: 2;
  text-align: center;
  position: relative;
  width: calc(100% - 16px);
  margin-inline: auto;
  z-index: 0;
  color: white;
  &:before {
    content: "";
    position: absolute;
    z-index: -1;
    left: 0;
    top: 0;
    transform: translateY(-0.2lh);
    width: 100%;
    height: 1.6lh;
    background-color: rgba(0, 0, 0, 0.642);
  }
}

@media (max-width: 35rem) {
  .post__banner {
    grid-template-rows: repeat(3, 1fr);
    aspect-ratio: auto;
  }

  .post__banner__image {
    border-radius: 0;
  }

  .post__banner__text {
    padding: 0.5rem 1rem;
  }
}

